--- a/back-end/musicapp/src/main/resources/application.properties
+++ b/back-end/musicapp/src/main/resources/application.properties
@@ -1,1 +1,35 @@
+#security for github
+spring.security.oauth2.client.registration.github.client-id=d3e47fc2ddd966fa4352
+spring.security.oauth2.client.registration.github.client-secret=3bc0f6b8332f93076354c2a5bada2f5a05aea60d
+spring.security.oauth2.client.registration.github.redirect-uri-template="{baseUrl}/oauth2/callback/{registrationId}"
+spring.security.oauth2.client.registration.github.scope=user:email,read:user
+
+#security for google
+spring.security.oauth2.client.registration.google.client-id=5014057553-8gm9um6vnli3cle5rgigcdjpdrid14m9.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=tWZKVLxaD_ARWsriiiUFYoIk
+spring.security.oauth2.client.registration.google.redirect-uri-template="{baseUrl}/oauth2/callback/{registrationId}"
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+#security for facebook
+spring.security.oauth2.client.registration.facebook.client-id=408820223260317
+spring.security.oauth2.client.registration.facebook.client-secret=fef23b55bf3f9084308a6d492ae4bc4a
+spring.security.oauth2.client.registration.facebook.redirect-uri-template="{baseUrl}/oauth2/callback/{registrationId}"
+spring.security.oauth2.client.registration.facebook.scope=email,public_profile
+
+
+
+#provider
+spring.security.oauth2.client.provider.facebook.authorization-uri=https://www.facebook.com/v3.0/dialog/oauth
+spring.security.oauth2.client.provider.facebook.tokenUri=https://graph.facebook.com/v3.0/oauth/access_token
+spring.security.oauth2.client.provider.facebook.userInfoUri=https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
+#app properties
+app.auth.tokenSecret=926D96C90030DD58429D2751AC1BDBBC
+app.auth.tokenExpirationMsec=864000000
+app.oauth2.authorizedRedirectUris=http://localhost:3000/oauth2/redirect,myandroidapp://oauth2/redirect,myiosapp://oauth2/redirect
+#datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/music?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
