--- a/back-end/musicapp/src/main/resources/application.yml
+++ b/back-end/musicapp/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
     datasource:
         url: jdbc:mysql://localhost:3306/music?useSSL=false
         username: root
-        password: giang1998@
+        password: 1234
 
     jpa:
         show-sql: true
