--- a/back-end/musicapp/src/main/resources/application.yml
+++ b/back-end/musicapp/src/main/resources/application.yml
@@ -57,8 +57,8 @@ app:
       - myiosapp://oauth2/redirect
 server:
   ssl:
-    key-store: classpath:keystore-giang.p12
-    key-store-password: giangnt15
+    key-store: classpath:keystore.p12
+    key-store-password: buidoandung123
     keyStoreType: PKCS12
     keyAlias: tomcat
   port: 8443
