--- a/front-end/musicapp/package.json
+++ b/front-end/musicapp/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.16.1",
     "history": "^4.7.2",
+    "jquery": "^3.3.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
