--- a/back-end/musicapp/src/main/resources/application.yml
+++ b/back-end/musicapp/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
     datasource:
         url: jdbc:mysql://localhost:3306/music?useSSL=false
         username: root
-        password: 1234
+        password: giang1998@
 
     jpa:
         show-sql: true
@@ -57,8 +57,8 @@ app:
       - myiosapp://oauth2/redirect
 server:
   ssl:
-    key-store: classpath:keystore.p12
-    key-store-password: buidoandung123
+    key-store: classpath:keystore-giang.p12
+    key-store-password: giangnt15
     keyStoreType: PKCS12
     keyAlias: tomcat
   port: 8443
