--- a/front-end/admin/package.json
+++ b/front-end/admin/package.json
@@ -12,6 +12,7 @@
     "react-highlight-words": "^0.16.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
