--- a/back-end/musicapp/src/main/resources/application.yml
+++ b/back-end/musicapp/src/main/resources/application.yml
@@ -42,6 +42,10 @@ spring:
               authorizationUri: https://www.facebook.com/v3.2/dialog/oauth
               tokenUri: https://graph.facebook.com/v3.2/oauth/access_token
               userInfoUri: https://graph.facebook.com/v3.2/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
+    servlet:
+      multipart:
+        max-file-size: 20MB
+        max-request-size: 50MB
 app:
   auth:
     tokenSecret: 926D96C90030DD58429D2751AC1BDBBC
