--- a/back-end/musicapp/src/main/resources/application.yml
+++ b/back-end/musicapp/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
     datasource:
         url: jdbc:mysql://localhost:3306/music?useSSL=false&allowPublicKeyRetrieval=true
         username: root
-        password: giang1998@
+        password: 1234
 
     jpa:
         show-sql: true
@@ -61,8 +61,8 @@ app:
       - myiosapp://oauth2/redirect
 server:
   ssl:
-    key-store: classpath:keystore-giang.p12
-    key-store-password: giangnt15
+    key-store: classpath:keystore.p12
+    key-store-password: buidoandung123
     keyStoreType: PKCS12
     keyAlias: tomcat
   port: 8443
