--- a/front-end/musicapp-pulse/package.json
+++ b/front-end/musicapp-pulse/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "2.1.8",
     "react-transition-group": "^4.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "set HTTPS=true&&react-scripts start",
