--- a/front-end/musicapp-pulse/package.json
+++ b/front-end/musicapp-pulse/package.json
@@ -6,10 +6,14 @@
     "antd": "^3.16.2",
     "axios": "^0.18.0",
     "history": "^4.9.0",
+    "i18next": "^15.1.0",
+    "i18next-browser-languagedetector": "^3.0.1",
     "jquery": "^3.4.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-country-flag": "^1.0.2",
     "react-dom": "^16.8.6",
+    "react-i18next": "^10.9.0",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-s-alert": "^1.4.1",
